fix errors on 1.8